# aicli

./: .env.example  .gitignore  README.md  TODO.md  USAGE.md  aicli.py  api_client.py  config.py  engine.py  handlers.py  logger.py  package.py  pyproject.toml  requirements.txt  session_manager.py  settings.py  temp.txt  utils.py
Test/: aicli.py  api_client.py  config.py  handlers.py  utils.py
prompts/: img_prompt.txt  img_prompt2.txt  pirate.txt  review_rules.txt
src/aicli/: aicli.py  api_client.py  bootstrap.py  chat_ui.py  commands.py  config.py  engine.py  handlers.py  logger.py  personas.py  prompts.py  review.py  session_manager.py  session_state.py  settings.py  theme_manager.py  utils.py  workflows.py
src/aicli/docs_src/: assistant_docs.md
src/aicli/managers/: __init__.py  context_manager.py  multichat_manager.py  session_manager.py
src/aicli/themes/: default.json
src/aicli/utils/: __init__.py  config_loader.py  file_processor.py  formatters.py  message_builder.py  ui_helpers.py
tests/: conftest.py  test_api_client.py  test_cli_entrypoint.py  test_engine.py  test_formatters.py  test_handlers.py  test_personas.py  test_review.py  test_session_manager.py  test_session_manager_commands.py  test_session_manager_main_loop.py  test_settings.py  test_utils.py
tools/: review.py  sync.py
