[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicli"
version = "1.3.0"
authors = [
  { name="Dank A. Saurus", email="contact@dank.ninja" },
]
description = "A flexible and robust command-line interface for interacting with multiple AI models."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "requests",
    "prompt-toolkit",
    "python-dotenv",
    "platformdirs",
]

[project.scripts]
aicli = "aicli.aicli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mocker",
    "pyfakefs",
]
dev = [
    "ruff",
    "pre-commit",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "--cov=src/aicli --cov-report=term-missing"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aicli = ["themes/*"]

[tool.coverage.run]
omit = [
    "src/aicli/__init__.py",
]
